--- a/package.json
+++ b/package.json
@@ -13,11 +13,17 @@
     "@types/node": "20.1.1",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
+    "bootstrap": "^5.2.3",
+    "cookie": "^0.5.0",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
     "next": "13.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-toastify": "^9.1.2",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "@types/bootstrap": "^5.2.6"
   }
 }
